--- a/templates/php-fpm-librenms.erb
+++ b/templates/php-fpm-librenms.erb
@@ -1,4 +1,4 @@
-### MANAGED BY PUPPET ###
+; ### MANAGED BY PUPPET ###
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
