update rrdcache listen interfaces

--- a/templates/rrdcached.erb
+++ b/templates/rrdcached.erb
@@ -9,5 +9,5 @@ JOURNAL_PATH=/var/lib/rrdcached/journal/
 PIDFILE=<%= @rrdcached_pidfile %>
 SOCKFILE=<%= @rrdcached_socketfile %>
 SOCKGROUP=librenms
-BASE_OPTIONS="-B -F -R"
+BASE_OPTIONS="-B -F -R -L"
 
